chore: update EVEShipFit links to the latest format

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -12,7 +12,7 @@ body:
   attributes:
     label: URL of the fit
     description: Share the fit-link and paste it here (when possible)
-    placeholder: https://eveship.fit/#import/...
+    placeholder: https://eveship.fit/#fit:...
 - type: textarea
   id: expected
   attributes:
